discussion/kv_engine/158438/158438_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

Remove conversion from old style password file

isasl.pw is long gone and we've been using cbsaslpw.json since
the introduction of SCRAM authentication.

Remove the pre-generated password database and generate it in
the environment so that we can add new unit tests cases which
tewaks the password database and calls reload

Change-Id: I5efdf821fe718dbc2580f1fd6b771a23e04a4886

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-07-30 08:55:32.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-30 09:12:11.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10982/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/client_server_test.cc:29:24: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
        nlohmann::json pwdb;
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:37:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/client_server_test.cc:30:35: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
        pwdb["users"] = nlohmann::json::array();
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:37:7: note: template is declared here
class basic_json;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10982/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/client_server_test.cc:29:24:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10982/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/605/ : FAILURE

Compile error at [2021-07-30T08:56:31.045Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/cbsasl/client_server_test.cc:29:24:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/605/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20659/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20659/ )

Undefined Sanitizer: home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/executor/globaltask.cc:61:17: runtime error: member call on address 0x61d000013680 which does not point to an object of type "EventuallyPersistentEngine" ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20659/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9648/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38206/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32578/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11690/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/589/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13111/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12575/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12757/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
